<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refreshFeeds_Button"
        android:title="@string/refreshFeeds_Button"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/only_on_first_group">
    <item
        android:id="@+id/addFeed_Button"
        android:title="@string/addFeed_Button"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteAllRssFeeds_Button"
        android:title="@string/deleteAllRssFeeds_Button"
        android:icon="@drawable/ic_clear_white_24dp"
        app:showAsAction="never" />
    </group>

</menu>
