<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutMargin">

    <TextView
        android:id="@+id/newFeedView_Title_TextView"
        android:text="@string/newFeedView_Title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/elementSmallMargin" />

    <TextView
        android:id="@+id/newFeedView_TextView"
        android:text="@string/newFeedView_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/newFeedView_Title_TextView"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/elementSmallMargin" />

    <EditText
        android:id="@+id/newFeedView_FeedUrl_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:text="@string/newFeedView_FeedUrl_EditText"
        android:layout_below="@+id/newFeedView_TextView"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/elementSmallMargin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newFeedView_FeedUrl_EditText"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/newFeedView_Cancel_Button"
            android:text="@string/newFeedView_Cancel_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/elementSmallMargin" />

        <Button
            android:id="@+id/newFeedView_Ok_Button"
            android:text="@string/newFeedView_Ok_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/elementSmallMargin" />

    </LinearLayout>

</RelativeLayout>
